# rag_agent

./: .gitignore  README.md  langgraph.json  pyproject.toml
daniel_agent/: agent.py
daniel_agent/utils/: model.py  prompts.py
data/: output_text.md
data/output/: Agentic_Design_Patterns_text.md
rag/: graph_vector_store.py  indexing.py  pdf_to_md.py
